Fixing blog article page overflow issue (#95)

--- a/assets/bundle.article.css
+++ b/assets/bundle.article.css
@@ -411,3 +411,8 @@ Use 'color('token') to access the defined color
     padding-left: 0 !important;
   }
 }
+
+.article__container--alignment {
+  margin-left: unset;
+  margin-right: unset;
+}
