--- a/src/styles/templates/article.scss
+++ b/src/styles/templates/article.scss
@@ -255,3 +255,7 @@
   
 }
 
+.article__container--alignment{
+  margin-left: unset;
+  margin-right: unset;
+}
